[metadata]
name = nuage-openstack-audit
summary = "Openstack Audit for Nuage Networks"
description-file =
    README.rst
author = Nuage Networks / NOKIA
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
license = ASL 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    nuage_openstack_audit
data_files =
    etc/nuage-openstack-audit.sample.rc =
         etc/nuage-openstack-audit.sample.rc

[entry_points]
console_scripts =
    nuage-openstack-audit = nuage_openstack_audit.main:main